# oak

./: .gitignore  Notes.md  README.md  ci.json  del_old_builds.sh  integration.json  project.json
archive/: tasks.cpp
birch/src/: CMakeLists.txt  consolidate.cpp  formatter.cpp  formatter.hpp  main.cpp  notify.cpp
birch/src/cmake/: boost_user-config.jam.in
ci-run/: CMakeLists.txt  TODO.txt  ci-c++.json  ci-global.json  ci-project.json  json.cpp  json.grammar.hpp  json.hpp  main.cpp  output-template.xml  output.css  output.js  process.cpp  process.hpp  ptree.utils.hpp  task.utils.cpp  task.utils.hpp  tasks.cpp  tasks.hpp  test-output.xml  test.xml
configs/builtin/: base.json  defaults.json  integrate-c++.json  publish-birch.json  publish-remote-rsync+mongo.json  tasks-c++.json  variant-c++.json
configs/examples/: ci.json  etc_oak_config.json  etc_oak_defaults.json  etc_oak_system.json  project.json
dummy/source/: CMakeLists.txt  dummy.cpp  googletest.cpp
libs/boost-process/boost/process/posix/initializers/: bind_stderr.hpp  bind_stdin.hpp  bind_stdout.hpp
libs/uon/: model.cpp  model.hpp  operations.cpp  reader.hpp  reader_bson.cpp  reader_json.cpp  test.cpp  uon.cpp  uon.hpp  writer.hpp  writer_bson.cpp  writer_json.cpp
src/: CMakeLists.txt  TODO.txt  config.cpp  config.hpp  formatter.hpp  formatter_markdown.cpp  json.cpp  main.cpp  output.css  output.js  process.cpp  process.hpp  ptree_utils.hpp  task.utils.cpp  task.utils.hpp  task_utils.cpp  task_utils.hpp  tasks.cpp  tasks.hpp
src/cmake/: boost.cmake  bzip2.cmake  mongocpp.cmake  zlib.cmake
src_birch/: CMakeLists.txt  consolidate.cpp  main.cpp  notify.cpp
